Versão final do carrinho parte do ireport

--- a/src/main/resources/produtos_relatorio.jrxml
+++ b/src/main/resources/produtos_relatorio.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="produtos_relatorio" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3d66f996-47b0-4ce1-a20e-edc3e8fe098c">
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Carrinho"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="carrinho-compras"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<queryString>
 		<![CDATA[SELECT *
@@ -16,7 +16,7 @@ FROM Produto]]>
 	<field name="preco" class="java.lang.Double">
 		<property name="com.jaspersoft.studio.field.label" value="preco"/>
 	</field>
-	<field name="tipo" class="java.lang.String">
+	<field name="tipo" class="br.ufpi.carrinho.model.Tipo">
 		<property name="com.jaspersoft.studio.field.label" value="tipo"/>
 	</field>
 	<background>
@@ -25,7 +25,7 @@ FROM Produto]]>
 	<title>
 		<band height="98" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="0" width="550" height="85" forecolor="#2F00FF" uuid="65100a45-fc56-4d6b-9c70-fcf9be652248"/>
+				<reportElement x="0" y="0" width="450" height="85" forecolor="#2F00FF" uuid="65100a45-fc56-4d6b-9c70-fcf9be652248"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Verdana" size="36" isBold="true"/>
 				</textElement>
@@ -34,7 +34,7 @@ FROM Produto]]>
 		</band>
 	</title>
 	<columnHeader>
-		<band height="22" splitType="Stretch">
+		<band height="18" splitType="Stretch">
 			<staticText>
 				<reportElement x="0" y="0" width="100" height="18" backcolor="#CCCCCC" uuid="967d07d0-52dd-43b8-b7fe-d1616805c45e"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -86,7 +86,7 @@ FROM Produto]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Verdana" size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{tipo}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{tipo}.name()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="430" y="0" width="122" height="20" uuid="611eaa56-c221-4468-a26e-e9ed76c33ae4"/>
